--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -2,6 +2,6 @@
 - name: Converge
   hosts: all
   tasks:
-    - name: "Include iac-role-k8s"
+    - name: "Include iac_role_k8s"
       include_role:
-        name: "iac-role-k8s"
+        name: "iac_role_k8s"
