--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -8,11 +8,12 @@ dependency:
 driver:
   name: docker
 platforms:
-  - name: ubuntu-18.04-iac-role-services 
-    image: "geerlingguy/docker-${MOLECULE_DISTRO:-ubuntu1804}-ansible:latest"
+  - name: ubuntu-iac-rke 
+    image: "geerlingguy/docker-${MOLECULE_DISTRO:-ubuntu2004}-ansible:latest"
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /var/run/docker.sock:/var/run/docker.sock
     privileged: true
     pre_build_image: true
 provisioner:
