docs: Alterado nome dos autores da role
Revisado por:
- Sebawebber
- Gabriel Iglesias
- Luiz Gustavo Rodrigues
- marcio_machado
- jhonatanrampin
Refs #1

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 
 galaxy_info:
-  author: "Felipe Nobrega - Dissipar - Mansur"
+  author: "Felipe Nobrega - Dissipar - Mansur - Victor Braga - Roze Cardoso - Gazzinelli  - Gabriel Iglesias"
   description: Role para instalar o RKE
   company: Mentoria IaC
 
