--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,16 +17,16 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip install -r requirements.txt
+          pip3 install pipenv
+          pipenv install
       - name: Run Linters
         run: |
-          ansible-lint
+          pipenv run ansible-lint
   molecule:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python_version: [3.9]
+        python-version: [3.9]
         molecule_distro: [ubuntu1804, ubuntu2004]
     steps:
       - uses: actions/checkout@v2
@@ -36,8 +36,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade pip setuptools
-          python3 -m pip install -r requirements.txt
+          pip3 install pipenv
+          pipenv install
       - name: Force GitHub Actions' docker daemon to use vfs.
         run: |
           sudo systemctl stop docker
@@ -45,7 +45,7 @@ jobs:
           sudo systemctl start docker
       - name: Test with molecule
         run: |
-          molecule test --all
+          pipenv run molecule test
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
