fix: Removeu rke e adicionar chave do k8s
Esse commit remove o binário do rke e ajusta os testes para garantir isso.

Adicionado a chave pública do usuário do deploy (k8s).

Revisado por:
 - Um monte de gente na live (Print nos comentários do PR)

 Ref #1

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -93,8 +93,8 @@
     shell: /bin/bash
     state: present
 
-- name: Baixando o Binario do RKE
-  get_url:
-    url: "{{ rke_release }}"
-    dest: /usr/bin/rke
-    mode: +x
+- name: Aplicando a chave publica do usuário k8s
+  authorized_key:
+    user: k8s
+    state: present
+    key: https://github.com/mentoriaiacuser.keys
