fix: Corrigido o problema com modprobe
    Durante a execução do packer foi identificado que o systctl não
    estava funcionando.

    Para a correção do issue, na role do ansible foi incluido a task
    de habilitar o modulo br_netfiler utilizando modprobe.

    O molecule necessitou algumas configurações extras, incluindo um
    bind de volume /lib/modules no container, para permitir o module
    se carregado. Feito ajuste também no test infra para buscar os
    novos parametros do bridge.

    Revisado por:
    - Sebawebber
    - Danilo Rocha
    - Luiz Aoqui
    - ramonboorges
    - Brunareisalm
    - Juan maia
    - robertoromeu
    Refs #4

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,14 +9,21 @@
     state: present
     update_cache: yes
 
-- name: Configuração do iptables
-  sysctl:
-    name: net.bridge.bridge-nf-call-iptables
-    value: "1"
-    sysctl_file: "/etc/sysctl.d/k8s.conf"
-    sysctl_set: yes
+- name: Instalação do module BR_Netfilter
+  community.general.modprobe:
+    name: br_netfilter
     state: present
+
+- name: " Configuração do iptables para BR_netfilter"
+  ansible.posix.sysctl:
+    name: "{{ item }}"
+    sysctl_set: yes
+    value: "1"
     reload: yes
+    sysctl_file: /etc/sysctl.d/20-net-bridge.conf
+  loop:
+    - "net.bridge.bridge-nf-call-ip6tables"
+    - "net.bridge.bridge-nf-call-iptables"
 
 - name: Adicionando chaves gpg do Docker
   apt_key:
