--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -8,12 +8,13 @@ dependency:
 driver:
   name: docker
 platforms:
-  - name: ubuntu-iac-rke 
+  - name: ubuntu-iac-rke
     image: "geerlingguy/docker-${MOLECULE_DISTRO:-ubuntu2004}-ansible:latest"
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
       - /var/run/docker.sock:/var/run/docker.sock
+      - /lib/modules/:/lib/modules:ro
     privileged: true
     pre_build_image: true
 provisioner:
