feat: Usar role do Runtime
Removido as tasks que foram migradas para a role runtime, como
por exemplo docker e CNI.
Feita a adição também da dependencia da role iac_role_runtime.
Alterada a documentação README.md para que seja compativel com a
utilização do pipenv

Revisador por:
- Luis aoqui
- Mansur
- Danilo Rocha
- Thaís d'Angelis
- Plinio
- Gabriel Inglesias

Ref: #4 #6

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,7 +1,5 @@
 ---
 - name: Converge
   hosts: all
-  tasks:
-    - name: "Include iac_role_k8s"
-      include_role:
-        name: "iac-role-node-rke"
+  roles:
+    - iac_role_node_rke
