--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,3 @@
-
 galaxy_info:
   author: "Felipe Nobrega - Dissipar - Mansur - Victor Braga - Roze Cardoso - Gazzinelli  - Gabriel Iglesias"
   description: Role para instalar o RKE
@@ -28,9 +27,9 @@ galaxy_info:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
   platforms:
-  - name: Ubuntu
-    versions:
-    - 20.04
+    - name: Ubuntu
+      versions:
+        - 20.04
 
   galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
@@ -40,6 +39,9 @@ galaxy_info:
     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
     #       Maximum 20 tags per role.
 
-dependencies: []
-  # List your role dependencies here, one per line. Be sure to remove the '[]' above,
-  # if you add dependencies to this list.
+dependencies:
+  - name: iac_role_runtime
+    src: https://github.com/mentoriaiac/iac_role_runtime.git
+    scm: git
+    version: v0.1.0
+
