--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,57 +1,5 @@
 ---
 
-- name: Instalação dos pre-req do Docker
-  apt:
-    pkg:
-      - apt-transport-https
-      - ca-certificates
-      - curl
-    state: present
-    update_cache: yes
-
-- name: Configuração do iptables
-  sysctl:
-    name: net.bridge.bridge-nf-call-iptables
-    value: "1"
-    sysctl_file: "/etc/sysctl.d/k8s.conf"
-    sysctl_set: yes
-    state: present
-    reload: yes
-
-- name: Adicionando chaves gpg do Docker
-  apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg
-    keyring: /usr/share/keyrings/docker-archive-keyring.gpg
-
-- name: instala o repo do docker
-  apt_repository:
-    repo: "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu {{ ubuntu_release }} stable"
-    state: present
-    filename: docker.list
-
-- name: Criando diretorio /etc/docker
-  file:
-    path: /etc/docker
-    recurse: yes
-    state: directory
-    mode: "0644"
-
-- name: Copy file with owner and permissions
-  copy:
-    src: daemon.json
-    dest: /etc/docker/daemon.json
-    mode: "0644"
-
-- name: Instalação do Docker
-  apt:
-    pkg:
-      - "docker-ce={{ docker_ce_version }}"
-      - "docker-ce-cli={{ docker_ce_version }}"
-      - "containerd.io={{ containerd_version }}"
-    state: present
-    update_cache: yes
-
-
 - name: Adicionando chave gpg do K8S
   apt_key:
     url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
@@ -93,8 +41,8 @@
     shell: /bin/bash
     state: present
 
-- name: Baixando o Binario do RKE
-  get_url:
-    url: "{{ rke_release }}"
-    dest: /usr/bin/rke
-    mode: +x
+- name: Aplicando a chave publica do usuário k8s
+  authorized_key:
+    user: k8s
+    state: present
+    key: https://github.com/mentoriaiacuser.keys
