fix: Corrigido teste de python
Devido a mudanças na role de RKE para suportar a role dependencia
runtime, foi necessário fazer alguns ajustes nos testes.
Corrigido dentro do molecule.yml o parametro do runtime do docker para
que seja suporta o DinD (Docker in Docker) para testes do python com
docker.

Ref: #4 #6

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -9,6 +9,7 @@ platforms:
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     privileged: yes
     pre-build: yes
 provisioner:
