--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,7 +6,7 @@ galaxy_info:
   namespace: mentoriaiac
   license: MIT
 
-  min_ansible_version: 5.6
+  min_ansible_version: "5.6"
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
@@ -19,8 +19,8 @@ galaxy_info:
   platforms:
     - name: Ubuntu
       versions:
-        - 20.04
-        - 18.04
+        - focal
+        - bionic
 
   galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
@@ -35,4 +35,3 @@ dependencies:
     src: https://github.com/mentoriaiac/iac_role_runtime.git
     scm: git
     version: v0.1.0
-
