--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,9 @@
-name: CI_RKE_Mentoria
+name: CI
+
 on:
   push:
   pull_request:
+
 jobs:
   linter:
     runs-on: ubuntu-20.04
@@ -16,11 +18,12 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip3 install pipenv
-          pipenv install
+          python3 -m pip install --upgrade pip
+          python3 -m pip install -r requirements.txt
       - name: Run Linters
         run: |
-          pipenv run ansible-lint
+          ansible-lint
+
   molecule:
     runs-on: ubuntu-20.04
     strategy:
@@ -35,8 +38,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip3 install pipenv
-          pipenv install
+          python3 -m pip install --upgrade pip
+          python3 -m pip install -r requirements.txt
       - name: Force GitHub Actions' docker daemon to use vfs.
         run: |
           sudo systemctl stop docker
@@ -44,8 +47,11 @@ jobs:
           sudo systemctl start docker
       - name: Test with molecule
         run: |
-          pipenv run molecule test
+          molecule test --all
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
+          # Mudar a cor de mensagens de debug para aparecer melhor no fundo
+          # escuro dos logs do GitHub Action.
+          ANSIBLE_COLOR_DEBUG: "bright gray"
           MOLECULE_DISTRO: ${{ matrix.molecule_distro }}
