--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,21 +1,13 @@
 galaxy_info:
-  author: "Felipe Nobrega - Dissipar - Mansur - Victor Braga - Roze Cardoso - Gazzinelli  - Gabriel Iglesias"
-  description: Role para instalar o RKE
-  company: Mentoria IaC
   role_name: iac_role_node_rke
   namespace: mentoriaiac
+  description: Role para instalar o RKE
+
+  author: "Felipe Nobrega - Dissipar - Mansur - Victor Braga - Roze Cardoso - Gazzinelli  - Gabriel Iglesias"
+  company: Mentoria IaC
   license: MIT
+  min_ansible_version: 5.6
 
-  min_ansible_version: "5.6"
-
-  # If this a Container Enabled role, provide the minimum Ansible Container version.
-  # min_ansible_container_version:
-  #
-  # Provide a list of supported platforms, and for each platform a list of versions.
-  # If you don't wish to enumerate all versions for a particular platform, use 'all'.
-  # To view available platforms and versions (or releases), visit:
-  # https://galaxy.ansible.com/api/v1/platforms/
-  #
   platforms:
     - name: Ubuntu
       versions:
